# ChangeLog for net-www/apache
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/apache/Attic/ChangeLog,v 1.518 2007/05/09 12:48:20 kloeri Exp $

*apache-2.2.4-r1 (09 May 2007)

  09 May 2007; Bryan Østergaard <kloeri@gentoo.org>
  +apache-2.2.4-r1.ebuild:
  Throw in some symlinks to solve bug 177697.

  07 May 2007; Bryan Østergaard <kloeri@gentoo.org> apache-2.2.4.ebuild:
  Fix SLOT.

  07 May 2007; Christian Heim <phreak@gentoo.org> apache-2.2.4.ebuild:
  Importing Luca's and my work from the overlay, apache-2.2.4 should now be
  ready and should be fixing all those open bugreports.

  21 Apr 2007; Christian Heim <phreak@gentoo.org> apache-1.3.34-r14.ebuild,
  apache-1.3.37.ebuild:
  Stop using insinto /etc/conf.d and use the newconfd function instead, #174266.

  09 Apr 2007; Christian Heim <phreak@gentoo.org> apache-2.0.59-r2.ebuild:
  Fixing the built_with_use for apache-2.0.59, since apache-2.0 only supports
  apr-0* for now. Thanks to Marijn for the bugreport and Jakub for the diff.
  Fixing #173750.

  31 Jan 2007; Luca Longinotti <chtekk@gentoo.org> -apache-2.2.3-r2.ebuild:
  Remove old 2.2 version.

  28 Jan 2007; Luca Longinotti <chtekk@gentoo.org> apache-2.0.58-r2.ebuild,
  apache-2.0.59-r2.ebuild, apache-2.2.3-r2.ebuild, apache-2.2.4.ebuild:
  Fix apr deps.

*apache-2.2.4 (21 Jan 2007)

  21 Jan 2007; Christian Heim <phreak@gentoo.org> +apache-2.2.4.ebuild:
  Version bump (thanks to Dean Baender <dcb at baender.com> and Kalin
  Kozhuharov <kalin at ThinRope.net> in #114232).

  20 Jan 2007; Christian Heim <phreak@gentoo.org> apache-2.2.3-r2.ebuild:
  Fixing a small typo in =net-www/apache-2.2.3-r2.

  18 Jan 2007; Luca Longinotti <chtekk@gentoo.org> apache-2.2.3-r2.ebuild:
  Fix quoting, fix ldap dep, use econf correctly, thanks to phreak.

*apache-2.2.3-r2 (15 Jan 2007)

  15 Jan 2007; Luca Longinotti <chtekk@gentoo.org> metadata.xml,