@@ -1,6 +1,9 @@
 # ChangeLog for net-www/apache
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/apache/Attic/ChangeLog,v 1.518 2007/05/09 12:48:20 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/apache/Attic/ChangeLog,v 1.519 2007/05/18 07:09:07 phreak Exp $
+
+  18 May 2007; Christian Heim <phreak@gentoo.org> apache-2.2.4-r1.ebuild:
+  Adding mpm-itk back.
 
 *apache-2.2.4-r1 (09 May 2007)
 
